--- a/src/styleguide/layout/_section.scss
+++ b/src/styleguide/layout/_section.scss
@@ -31,7 +31,7 @@
   padding-right: 0;
 
   @include breakpoint(sm) {
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 200px;
+    padding-right: 200px;
   }
 }
